集成进微信小程序

--- a/mall-portal/src/main/resources/application-dev.properties
+++ b/mall-portal/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ logging.level.com.macro.mall.portal.dao=debug
 #===datasource start===
 spring.datasource.url=jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 #===datasource end===
 
 #===druid start===
@@ -69,3 +69,7 @@ spring.rabbitmq.password=mall
 #\u5982\u679C\u5BF9\u5F02\u6B65\u6D88\u606F\u9700\u8981\u56DE\u8C03\u5FC5\u987B\u8BBE\u7F6E\u4E3Atrue
 spring.rabbitmq.publisher-confirms=true
 #===rabbitMq end===
+#===微信小程序 start===
+wx.miniapp.configs[0].appid=wx1c0f5a0255da0c55
+wx.miniapp.configs[0].secret=7c883eb88fef382663273e8949b27c58
+#===微信小程序 end===
