--- a/mall-portal/pom.xml
+++ b/mall-portal/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-miniapp</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
