增加支付相关功能

--- a/mall-admin/src/main/resources/application.properties
+++ b/mall-admin/src/main/resources/application.properties
@@ -36,12 +36,12 @@ jwt.tokenHead=Bearer
 #===JWT end===
 
 #===OSS start===
-aliyun.oss.endpoint=oss-cn-shenzhen.aliyuncs.com
-aliyun.oss.accessKeyId=test
-aliyun.oss.accessKeySecret=test
-aliyun.oss.bucketName=macro-oss
+aliyun.oss.endpoint=oss-cn-beijing.aliyuncs.com
+aliyun.oss.accessKeyId=LTAIn49npkdaxgIb
+aliyun.oss.accessKeySecret=d47WXu6HDOrSR1GzHof4DioPhj6UZu
+aliyun.oss.bucketName=yiqigousi
 aliyun.oss.policy.expire=300
 aliyun.oss.maxSize=10
 aliyun.oss.callback=http://localhost:8080/aliyun/oss/callback
-aliyun.oss.dir.prefix=mall/images/
+aliyun.oss.dir.prefix=images/
 #===OSS end===
